src_old/objects/ApexJobTracker__c.object
<CustomObject>
    <description>This will keep track of all the batch jobs.</description>
    <fields>
        <fullName>AppClassName__c</fullName>
        <description>Application Class Name</description>
        <label>App Class Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchProcessId__c</fullName>
        <label>Batch Process Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Id1__c</fullName>
        <label>Id1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id2__c</fullName>
        <label>Id2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id3__c</fullName>
        <label>Id3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsFailureNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if batch retry failure notification alert is sent</description>
        <label>Is Failure Notified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLongRunning__c</fullName>
        <formula>AND((Now()- StartDateTime__c)*24*60 &gt; 0, TEXT(Status__c) &lt;&gt; &apos;Success&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLongRunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofTries__c</fullName>
        <label>Number of Tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>ProjectService</fullName>
                </value>
                <value>
                    <fullName>ProjectLocation</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>JobAttemptWorker</fullName>
                </value>
                <value>
                    <fullName>ProjectInvoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apply PB Credit</fullName>
                </value>
                <value>
                    <fullName>Cancel Job</fullName>
                </value>
                <value>
                    <fullName>Cancel Project</fullName>
                </value>
                <value>
                    <fullName>Cancel ProjectLocation</fullName>
                </value>
                <value>
                    <fullName>Cancel ProjectService</fullName>
                </value>
                <value>
                    <fullName>Close Project</fullName>
                </value>
                <value>
                    <fullName>Create Attempt</fullName>
                </value>
                <value>
                    <fullName>Create Job Materials</fullName>
                </value>
                <value>
                    <fullName>Create Jobs</fullName>
                </value>
                <value>
                    <fullName>Create Labor Invoice</fullName>
                </value>
                <value>
                    <fullName>Create Product Invoice</fullName>
                </value>
                <value>
                    <fullName>Create SalesTax Invoice</fullName>
                </value>
                <value>
                    <fullName>Delete AllProjectJobs</fullName>
                </value>
                <value>
                    <fullName>Delete Job</fullName>
                </value>
                <value>
                    <fullName>Delete Project</fullName>
                </value>
                <value>
                    <fullName>Delete ProjectLocation</fullName>
                </value>
                <value>
                    <fullName>Delete ProjectService</fullName>
                </value>
                <value>
                    <fullName>Import JobAttemptWorkers</fullName>
                </value>
                <value>
                    <fullName>Import Jobs</fullName>
                </value>
                <value>
                    <fullName>Import ProjectLocations</fullName>
                </value>
                <value>
                    <fullName>Launch Project</fullName>
                </value>
                <value>
                    <fullName>Schedule ProjectLocation</fullName>
                </value>
                <value>
                    <fullName>Schedule ProjectService</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>This will hold the job specific parameters for the apex job execution.</description>
        <inlineHelpText>This will hold the job specific parameters for the apex job execution.</inlineHelpText>
        <label>Parameters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>Attachment Parent ID</description>
        <label>Parent Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Apex Jobs Tracker</relationshipLabel>
        <relationshipName>Apex_Jobs_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>tracker execution response</description>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Apex Job Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AJT-{000000000}</displayFormat>
        <label>Apex Job Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Jobs Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>